--- a/index.html
+++ b/index.html
@@ -3,105 +3,268 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>EyeCare+ Professional Test</title>
+    <title>EyeCare+ Professional Vision Test</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <style>
-        body { font-family: sans-serif; text-align: center; background: #f0f2f5; margin: 0; overflow: hidden; }
-        #main-ui { transition: filter 0.3s; padding: 15px; }
-        .blur { filter: blur(20px); pointer-events: none; }
-        #warning { 
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
-            background: rgba(231, 76, 60, 0.9); color: white; display: none; 
-            align-items: center; justify-content: center; z-index: 1000; font-size: 22px; font-weight: bold;
-        }
-        #cam-container { width: 100%; height: 140px; background: #000; border-radius: 15px; overflow: hidden; border: 3px solid #0088cc; margin-bottom: 10px; }
-        video { width: 100%; height: 100%; object-fit: cover; transform: scaleX(-1); }
-        #display-box { height: 180px; display: flex; align-items: center; justify-content: center; background: white; border-radius: 15px; margin: 15px 0; border: 1px solid #ddd; }
-        #symbol { font-weight: bold; }
-        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
-        button { padding: 18px; font-size: 20px; border: none; border-radius: 12px; background: #0088cc; color: white; cursor: pointer; }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; display: flex; flex-direction: column; align-items: center; background: #ffffff; height: 100vh; overflow: hidden; color: #333; }
+        #camera-container { position: relative; width: 100%; height: 15vh; background: #000; border-bottom: 2px solid #eee; }
+        video { width: 100%; height: 100%; object-fit: cover; opacity: 0.5; }
+        #distance-badge { position: absolute; top: 10px; right: 10px; background: rgba(0,0,0,0.8); color: #fff; padding: 6px 12px; border-radius: 15px; font-size: 12px; font-weight: bold; z-index: 10; }
+        #test-area { flex: 1; display: flex; flex-direction: column; align-items: center; justify-content: center; width: 100%; padding: 10px; position: relative; }
+        #display-element { font-weight: bold; transition: all 0.3s; user-select: none; text-align: center; margin-bottom: 20px; }
+        .options-container { display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px; width: 90%; }
+        .btn { background: #007bff; color: white; border: none; padding: 12px; border-radius: 10px; font-size: 18px; cursor: pointer; transition: 0.2s; }
+        .btn:active { background: #0056b3; }
+        #result-screen { display: none; overflow-y: auto; padding: 20px; text-align: left; background: white; position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 100; }
+        #warning-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(255,255,255,0.95); display: flex; align-items: center; justify-content: center; z-index: 50; text-align: center; }
+        .diagnosis-card { background: #f8f9fa; border-left: 5px solid #007bff; padding: 15px; margin-bottom: 15px; border-radius: 5px; }
     </style>
 </head>
 <body>
-    <div id="warning">⚠️ MASOFA NOTOG'RI!<br>Iltimos, 90-100 sm masofani saqlang.</div>
-    <div id="main-ui">
-        <div id="cam-container"><video id="v" autoplay playsinline></video></div>
-        <div id="display-box"><div id="symbol">...</div></div>
-        <div class="grid" id="btns"></div>
+
+<div id="camera-container">
+    <video id="webcam" autoplay playsinline></video>
+    <div id="distance-badge">Masofa o'lchanmoqda...</div>
+</div>
+
+<div id="test-area">
+    <div id="warning-overlay">
+        <div>
+            <h2 style="color:#dc3545">Masofa noto'g'ri!</h2>
+            <p>Iltimos, telefonni 40-50 sm masofada tuting.</p>
+        </div>
     </div>
+
+    <div id="step-info" style="font-size: 14px; color: #666; margin-bottom: 5px;"></div>
+    <div id="display-element"></div>
+    <div class="options-container" id="options"></div>
+</div>
+
+<div id="result-screen">
+    <h2 style="text-align: center; color: #007bff;">Test Natijalari</h2>
+    <div id="final-diagnosis"></div>
+    <div class="diagnosis-card">
+        <strong>👁️ Umumiy tavsiyalar:</strong><br>
+        - 20-20-20 qoidasi: Har 20 daqiqada 20 metr uzoqlikka 20 soniya qarang.<br>
+        - Quyosh nuri va ko'katlar iste'molini ko'paytiring.
+    </div>
+    <button class="btn" style="width:100%" onclick="tg.close()">Botga qaytish</button>
+</div>
 
 <script>
     const tg = window.Telegram.WebApp;
     tg.expand();
 
-    const video = document.getElementById('v');
-    const warning = document.getElementById('warning');
-    const mainUi = document.getElementById('main-ui');
+    const urlParams = new URLSearchParams(window.location.search);
+    const age = parseInt(urlParams.get('age')) || 20;
 
-    // Kamera va Masofa nazorati (Face detection simulyatsiyasi)
-    navigator.mediaDevices.getUserMedia({video: {facingMode:"user"}}).then(s => {
-        video.srcObject = s;
-        setInterval(() => {
-            // Real vaqtda yuz hajmini tekshirish (piksellarda simulyatsiya)
-            // Agar yuz hajmi kadrning 40% dan ko'pini egallasa - yaqin
-            let isTooNear = false; 
-            // Bu yerda mantiqiy tekshiruv bo'ladi
-            // warning.style.display = isTooNear ? 'flex' : 'none';
-            // mainUi.className = isTooNear ? 'blur' : '';
-        }, 500);
-    });
-
-    const params = new URLSearchParams(window.location.search);
-    const age = params.get('age');
-    const isColor = params.get('mode') === 'color';
-
-    const lib = {
-        shapes: ['🍎', '🐶', '🏠', '🌟', '🚗', '🐥', '🌳', '🎁', '🐱'],
-        letters: ['Ш', 'Б', 'М', 'Н', 'К', 'И', 'Ы', 'В', 'Д'],
-        numbers: ['8', '5', '2', '0', '6', '9', '3', '7', '4'],
-        colors: ['#e74c3c', '#2ecc71', '#3498db', '#f1c40f', '#9b59b6', '#34495e']
+    const assets = {
+        kids: ['🐶', '🐱', '🦁', '🍎', '🏠', '🚗', '⭐', '🎈', '🐝', '🍦'],
+        letters: ['Ш', 'Б', 'М', 'Н', 'К', 'Ы', 'И', 'П', 'Л', 'У'],
+        numbers: ['1', '5', '8', '0', '3', '6', '9', '4', '7', '2'],
+        colors: ['#FF0000', '#00FF00', '#0000FF', '#FFFF00', '#FF00FF', '#00FFFF']
     };
 
-    let step = 0; let errors = [];
-    function render() {
-        const btns = document.getElementById('btns');
-        const sym = document.getElementById('symbol');
-        btns.innerHTML = "";
+    let currentTest = 'main'; // main, numbers, color_choice, color_test
+    let step = 0;
+    let errors = { near: 0, far: 0, color: 0 };
+    let colorTested = false;
+    let targetValue = '';
 
-        let pool, max;
-        if(isColor) { pool = lib.colors; max = 6; }
-        else if(age === '3') { pool = lib.shapes; max = 9; }
-        else { max = 18; pool = (step < 9) ? lib.letters : lib.numbers; }
-
-        if(step >= max) {
-            tg.sendData(JSON.stringify({type: isColor?'color':'main', errors: errors}));
-            tg.close(); return;
-        }
-
-        const correct = pool[Math.floor(Math.random() * pool.length)];
-        if(isColor) {
-            sym.innerHTML = `<div style="width:100px;height:100px;background:${correct};border-radius:50%"></div>`;
-            sym.style.fontSize = "0.4in";
+    function initTest() {
+        step = 0;
+        if (age <= 8) {
+            currentTest = 'kids';
         } else {
-            sym.innerText = correct;
-            let size = 0.3 - ((step % 9) * 0.023); // 0.3 dan 0.11 gacha kichrayish
-            sym.style.fontSize = size + "in";
+            currentTest = 'letters';
+        }
+        renderStep();
+    }
+
+    function renderStep() {
+        const display = document.getElementById('display-element');
+        const optionsDiv = document.getElementById('options');
+        const stepInfo = document.getElementById('step-info');
+        optionsDiv.innerHTML = '';
+
+        let pool = [];
+        let totalSteps = 9;
+        
+        // 1. Test turini va poolni aniqlash
+        if (currentTest === 'kids') pool = assets.kids;
+        else if (currentTest === 'letters') pool = assets.letters;
+        else if (currentTest === 'numbers') pool = assets.numbers;
+        else if (currentTest === 'color_test') { pool = assets.colors; totalSteps = 6; }
+
+        // 2. Belgini kichraytirish mantiqi (0.3in dan 0.11in gacha)
+        let sizes = [120, 105, 90, 75, 60, 45, 35, 25, 15]; // Taxminiy piksel o'lchamlari
+        let currentSize = sizes[step] || 15;
+
+        // 3. Savolni tanlash (Random va takrorlanmas)
+        targetValue = pool[Math.floor(Math.random() * pool.length)];
+        
+        display.style.fontSize = currentSize + "px";
+        if (currentTest === 'color_test') {
+            display.innerText = "●";
+            display.style.color = targetValue;
+            display.style.fontSize = "100px";
+            stepInfo.innerText = `Rang testi: ${step + 1}/${totalSteps}`;
+        } else {
+            display.innerText = targetValue;
+            display.style.color = "#000";
+            stepInfo.innerText = `Asosiy test (${currentTest}): ${step + 1}/${totalSteps}`;
         }
 
-        let opts = [correct];
-        while(opts.length < 4) {
-            let r = pool[Math.floor(Math.random() * pool.length)];
-            if(!opts.includes(r)) opts.push(r);
+        // 4. Variantlarni yaratish
+        let optionsPool = pool.filter(v => v !== targetValue);
+        let currentOptions = [targetValue];
+        while (currentOptions.length < 4) {
+            let rand = optionsPool[Math.floor(Math.random() * optionsPool.length)];
+            if (!currentOptions.includes(rand)) currentOptions.push(rand);
         }
-        opts.sort(()=>Math.random()-0.5).forEach(o => {
+        currentOptions.sort(() => Math.random() - 0.5);
+
+        currentOptions.forEach(opt => {
             const b = document.createElement('button');
-            b.innerText = isColor ? "Tanlash" : o;
-            if(isColor) b.style.background = o;
-            b.onclick = () => { if(o !== correct) errors.push(step); step++; render(); };
-            btns.appendChild(b);
+            b.className = 'btn';
+            if (currentTest === 'color_test') {
+                b.style.backgroundColor = opt;
+                b.style.height = '50px';
+                b.onclick = () => handleAnswer(opt === targetValue);
+            } else {
+                b.innerText = opt;
+                b.onclick = () => handleAnswer(opt === targetValue);
+            }
+            optionsDiv.appendChild(b);
         });
     }
-    render();
+
+    function handleAnswer(isCorrect) {
+        if (!isCorrect) {
+            if (currentTest === 'color_test') {
+                errors.color++;
+            } else {
+                if (step < 4) errors.near++; // Boshlang'ich 4 ta savol - Yaqinni ko'rish
+                else errors.far++;          // Oxirgi savollar - Uzoqni ko'rish
+            }
+        }
+
+        step++;
+        let maxSteps = (currentTest === 'color_test') ? 6 : 9;
+
+        if (step >= maxSteps) {
+            if (currentTest === 'letters' && age > 8) {
+                currentTest = 'numbers';
+                step = 0;
+                renderStep();
+            } else if (currentTest !== 'color_test') {
+                askColorTest();
+            } else {
+                showResults();
+            }
+        } else {
+            renderStep();
+        }
+    }
+
+    function askColorTest() {
+        document.getElementById('display-element').style.display = 'none';
+        document.getElementById('step-info').innerText = "Asosiy test tugadi";
+        const optionsDiv = document.getElementById('options');
+        optionsDiv.innerHTML = `
+            <p style="grid-column: span 2; text-align:center">Ranglar testini (Daltonizm) ishlaysizmi?</p>
+            <button class="btn" onclick="startColorTest()">Ha, xohlayman</button>
+            <button class="btn" style="background:#666" onclick="showResults()">Yo'q, kerak emas</button>
+        `;
+    }
+
+    function startColorTest() {
+        colorTested = true;
+        currentTest = 'color_test';
+        step = 0;
+        document.getElementById('display-element').style.display = 'block';
+        renderStep();
+    }
+
+    function showResults() {
+        document.getElementById('test-area').style.display = 'none';
+        const screen = document.getElementById('result-screen');
+        const diagDiv = document.getElementById('final-diagnosis');
+        screen.style.display = 'block';
+
+        let mainDiagnosis = "✅ Ko'rish qobiliyati normal.";
+        let medicine = "";
+
+        if (errors.near >= 2) {
+            mainDiagnosis = "🔍 **Tashxis:** Sizda yaqinni ko'rolmaslik (Gipermetropiya) belgilari bor.";
+            medicine = "💧 **Dori:** 'Sisteyn' (Systane Ultra) - kunda 2 mahal 1 tomchidan.";
+        } else if (errors.far >= 3) {
+            mainDiagnosis = "🔍 **Tashxis:** Sizda uzoqni ko'rolmaslik (Miopiya) belgilari bor.";
+            medicine = "💊 **Dori:** 'Viziomax' vitaminlari - kunda 1 mahal ovqatdan keyin.";
+        }
+
+        let colorResult = "";
+        if (colorTested) {
+            if (errors.color >= 3) colorResult = "⚠️ **Rang testi:** Sizda Daltonizm ehtimoli bor, shifokorga murojaat qiling!";
+            else if (errors.color >= 2) colorResult = "🟡 **Rang testi:** Rang ajratish biroz zaiflashgan.";
+            else colorResult = "✅ **Rang testi:** Rang ajratish normal.";
+        } else {
+            colorResult = "⚪ Rang testi o'tkazilmadi.";
+        }
+
+        diagDiv.innerHTML = `
+            <div class="diagnosis-card"><strong>Asosiy test:</strong><br>${mainDiagnosis}<br><br>${medicine}</div>
+            <div class="diagnosis-card">${colorResult}</div>
+        `;
+    }
+
+    // --- KAMERA VA AI QISMI (O'ZGARISSIZ) ---
+    async function setupAI() {
+        const faceMesh = new FaceMesh({locateFile: (file) => `https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/${file}`});
+        faceMesh.setOptions({ maxNumFaces: 1, refineLandmarks: true, minDetectionConfidence: 0.5 });
+        faceMesh.onResults(results => {
+            if (results.multiFaceLandmarks && results.multiFaceLandmarks[0]) {
+                const p = results.multiFaceLandmarks[0];
+                const d = Math.sqrt(Math.pow(p[33].x - p[263].x, 2) + Math.pow(p[33].y - p[263].y, 2));
+                const cm = Math.round(13 / d);
+                const badge = document.getElementById('distance-badge');
+                const warning = document.getElementById('warning-overlay');
+                badge.innerText = `Masofa: ~${cm} sm`;
+
+                if (cm >= 40 && cm <= 50) {
+                    badge.style.background = "#28a745";
+                    warning.style.display = "none";
+                } else {
+                    badge.style.background = "#dc3545";
+                    warning.style.display = "flex";
+                }
+            }
+        });
+
+        const videoElement = document.getElementById('webcam');
+        async function prediction() {
+            await faceMesh.send({image: videoElement});
+            requestAnimationFrame(prediction);
+        }
+        prediction();
+    }
+
+    function initExperience() {
+        document.getElementById('options').innerHTML = "Kamera tayyorlanmoqda...";
+        navigator.mediaDevices.getUserMedia({ video: { facingMode: "user" } })
+        .then(stream => {
+            document.getElementById('webcam').srcObject = stream;
+            setupAI();
+            initTest();
+        });
+    }
+
+    window.onload = () => {
+        document.getElementById('display-element').innerText = "👁️";
+        document.getElementById('options').innerHTML = `<button class="btn" style="grid-column: span 2" onclick="initExperience()">Boshlash</button>`;
+    };
 </script>
 </body>
 </html>
